@@ -1,4 +1,4 @@
-$Id: CHANGES,v 1.149 2001/12/24 12:28:38 stelian Exp $
+$Id: CHANGES,v 1.150 2001/12/24 12:31:12 stelian Exp $
 
 Changes between versions 0.4b25 and 0.4b26 (released ?????????????????)
 =======================================================================
@@ -11,6 +11,10 @@ Changes between versions 0.4b25 and 0.4b26 (released ?????????????????)
 2.	Fixed a off-by-one miscalculation which disabled dumping
 	a one letter subdirectory. Thanks to Chris Siebenmann 
 	<cks@utcc.utoronto.ca> for reporting the bug.
+
+3.	Fixed several restore bugs occuring when trying to
+	restore some missing files on the tape. Thanks to Chris
+	Siebenmann <cks@utcc.utoronto.ca> for reporting the bug.
 
 Changes between versions 0.4b24 and 0.4b25 (released November 17, 2001)
 =======================================================================
